@@ -192,9 +192,11 @@ dataframe specifying the time (ms) and value of amplitude anchors}
 spanning multiple syllables or a dataframe specifying the time (ms) and
 value (0 to 1) of each anchor}
 
-\item{interpol}{the method of smoothing envelopes based on provided anchors:
-'approx' = linear interpolation, 'spline' = cubic spline, 'loess' (default)
-= polynomial local smoothing function}
+\item{interpol}{the method of smoothing envelopes based on provided pitch,
+amplitude, and mouth anchors: 'approx' = linear interpolation, 'spline' =
+cubic spline, 'loess' (default) = polynomial local smoothing function. NB:
+this does not affect noiseAnchors, glottalAnchors, and the smoothing of
+formants}
 
 \item{discontThres, jumpThres}{if two anchors are closer in time than
 \code{discontThres}, the contour is broken into segments with a linear
